# fastscan

./: Cargo.toml  README.md
src/: main.rs
testfiles/: final-1.fasta  final.fasta
