[package]
name = "fastscan"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "fasta scanner for PacBio and ONT"
homepage = "https://github.com/omicscode/fastscan"
repository = "https://github.com/omicscode/fastscan"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
walkdir = "2"
bio = "2.1"
anyhow = "1.0"
